fix(ui): fix suffix button z-index (#3232)

--- a/packages/ui/src/components/InputFields/InputField/index.module.scss
+++ b/packages/ui/src/components/InputFields/InputField/index.module.scss
@@ -36,6 +36,7 @@
     width: _.unit(8);
     height: _.unit(8);
     display: none;
+    z-index: 1;
   }
 
 
